Fix projects grid wrap

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ main {
   font-size: 16px;
   font-family: sans-serif;
   min-height: 100vh;
+  max-width: 100vw;
 }
 main section {
   padding: 0 3em;
@@ -32,14 +33,17 @@ section.about {
 }
 .about-photo {
   margin: 0;
-  max-height: 420px;
-  width: 100%;
+  /* max-height: 420px; */
+  /* width: 100%; */
   position: relative;
-  object-fit: contain;
+  object-fit: cover;
   /* background-color: pink; */
   box-shadow: 10px 5px 10px 0px #5454545b;
   display: block;
   grid-area: image;
+}
+
+.about-photo {
 }
 .about-me-name {
   text-align: center;
@@ -99,23 +103,31 @@ section.about::after {
   flex-direction: row;
 }
 section.my-work {
+  --grid-col-max-size: 300px;
   margin-bottom: 4em;
   margin-top: 4em;
 }
+
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 6em 1em;
+  justify-content: space-between;
+  justify-items: center;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(var(--grid-col-max-size), 32%)
+  );
 }
 
 .project {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  max-width: max(var(--grid-col-max-size), 30vw);
   height: auto;
   box-shadow: 10px 5px 10px 0px #5454545b;
 }
 .project-screenshot {
-  width: 300px;
+  max-width: 100%;
   height: 200px;
   background-color: purple;
 }
